# CharacterBot

./: .gitmodules  CMakeLists.txt  README.md
include/: argControl.h  audioReceiver.h  characterBot.h  guildInformation.h  menuControl.h  messageContextResponse.h  serviceHandler.h  speechToText.h
src/: argControl.cpp  audioReceiver.cpp  characterBot.cpp  guildInformation.cpp  main.cpp  serviceHandler.cpp  speechToText.cpp
